added delete account api
